--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,13 @@ __pycache__/
 *.pyo
 
 # Data and model files
-data/
-models/
+data/*
+!data/.gitkeep
+
+models/*
+!models/
+
+# Common data formats
 *.pth
 *.pkl
 *.csv
